--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,7 @@
     "name": "goldfinch/video",
     "description": "",
     "type": "silverstripe-vendormodule",
-    "keywords": [
-        "silverstripe"
-    ],
+    "keywords": ["silverstripe"],
     "license": "MIT",
     "authors": [
         {
